# mcp-test

./: .gitignore  00_START_HERE.md  FILE_GUIDE.md  GITHUB_BEST_PRACTICES.md  INDEX.md  LICENSE  QUICK_START.md  README.md  SCANNER_CHECKLIST.md  SCANNER_GUIDE.md  mcp-config.json  mcp.json  mcp.yaml  package.json  pyproject.toml  requirements.txt  server.py  setup-github.ps1  setup-github.sh
.mcp/: config.json  mcp.json
examples/: README.md  scanner_test.py  test_client.py
tests/: test_server.py
